# 3D-mesh-outliner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
mesh2cad-wasm/: Cargo.toml
mesh2cad-wasm/src/: api.rs  cleanup.rs  export_types.rs  lib.rs  math3d.rs  polygon_ops.rs  projection.rs  sorting.rs  transforms.rs  types.rs  units.rs
mesh2cad-wasm/tests/: process.rs
src/mesh2cad/: __init__.py  cleanup.py  cli.py  config.py  export_dxf.py  export_svg.py  io_mesh.py  offsetting.py  pipeline.py  projection.py  transforms.py  types.py  units.py
tests/: conftest.py  test_cleanup.py  test_cli.py  test_export_dxf.py  test_export_svg.py  test_offsetting.py  test_projection.py  test_units.py
tests/fixtures/: plate_with_hole.stl
web/: AGENTS.md  CODEX_CONTEXT.md  LICENSE  README.md  TESTING.md  index.html  package.json  tsconfig.json  vite.config.ts
web/.github/: copilot-instructions.md
web/scripts/: build-wasm.mjs  sync-python.mjs
web/src/: app.test.tsx  app.tsx  index.css  main.tsx
web/src/components/: model-viewer.tsx  output-preview.test.tsx  output-preview.tsx  reload-prompt.tsx
web/src/lib/: auto-drop.test.ts  auto-drop.ts  directions.test.ts  directions.ts  download.ts  flat-face-candidates.test.ts  flat-face-candidates.ts  format.test.ts  format.ts  i18n.ts  mesh-worker-client.ts  model-loader.test.ts  model-loader.ts  types.ts  units.ts  vector-export.test.ts  vector-export.ts
web/src/test/: setup.ts
web/src/workers/: mesh2cad.worker.ts
