[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mesh2cad"
version = "0.1.0"
description = "Deterministic mesh-to-2D CAD projection pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "ezdxf>=1.4",
  "lxml>=5.0",
  "networkx>=3.0",
  "shapely>=2.0",
  "trimesh>=4.11",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
mesh2cad = "mesh2cad.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh2cad"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
