[package]
name = "mesh2cad-wasm"
version = "0.1.0"
edition = "2024"
description = "Rust/Wasm silhouette backend for mesh2cad"
license = "GPL-3.0-only"
repository = "https://github.com/ealitt/3D-mesh-outliner"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
i_overlay = "4.2.0"
js-sys = "0.3.82"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"

[dev-dependencies]
approx = "0.5"
